--- a/templates/admin/listVilles.html.twig
+++ b/templates/admin/listVilles.html.twig
@@ -2,7 +2,7 @@
 
 
 {% block body %}
-    <a href="{{ path('app_admin_villes_add') }}" class="btn grey lighten-2 btn-md mt-2">Ajouter une ville</a>
+    <a href="{{ path('app_admin_villes_add') }}" class="btn btn-primary btn-rounded" role="button"><i class="fas fa-plus mr-1"></i> Ajouter une ville</a>
 
     {# total items count #}
     <div class="count mt-3  mb-3 flex row justify-content-end mr-5">
