--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,14 +14,14 @@
                 {% endif %}
 
                 <div class="form-group">
-                    <label for="inputMail">Mail</label>
+                    <label for="inputMail">Identifiant</label>
                     <input type="text" value="{{ last_username }}" name="mail" id="inputMail" class="form-control"
                            required
                            autofocus>
                 </div>
 
                 <div class="form-group">
-                    <label for="inputPassword">Mot de Passe</label>
+                    <label for="inputPassword">Mot de passe</label>
                     <input type="password" name="password" id="inputPassword" class="form-control" required>
                 </div>
 
@@ -32,7 +32,7 @@
 
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-                  <button class="btn grey lighten-2 btn-md mt-4" type="submit">
+                <button class="btn grey lighten-2 btn-md mt-4" type="submit">
                     Connexion
                 </button>
             </form>
