--- a/public/bootstrap/css/style.css
+++ b/public/bootstrap/css/style.css
@@ -20,3 +20,13 @@
 .sortie_passee {
     background-color: #E7E7DD;
 }
+
+.annulee {
+    background: linear-gradient(45deg, #fff 23.75%, #F1948A 23.75%, #F1948A 26.25%, #fff 26.25%, #fff 73.75%, #F1948A 73.75%, #F1948A 76.25%, #fff 76.25%);
+    background-size: 200px 200px;
+    background-position: 50px 50px;
+}
+
+.body {
+    padding-bottom: 70px;
+}
