ajout lien afficher sortie sur homePage

--- a/templates/default/home.html.twig
+++ b/templates/default/home.html.twig
@@ -201,7 +201,7 @@
                             </th>
                             <th>
                                 <!-- AFFICHER LA SORTIE -->
-                                <a href="#" class="btn-floating btn-primary mr-2 btn-sm material-tooltip-main"
+                                <a href="{{ path('show_sortie', {id: sortie.id}) }}" class="btn-floating btn-primary mr-2 btn-sm material-tooltip-main"
                                    data-toggle="tooltip" data-placement="top" title="Afficher la sortie">
                                     <i class="far fa-eye"></i>
                                 </a>
